--- a/estilos.css
+++ b/estilos.css
@@ -590,6 +590,7 @@ form input{
       .contcfc {
         margin-bottom: -10px;
         margin-top: -30vh;
+        padding-top: 10vh;
         
     }
    
